# Inertia

./: .gitattributes  JUDGES.md  LICENSE  README.md  fake.py  hudai.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
inertia-backend/: .env.example  requirements.txt
inertia-backend/app/: config.py  main.py  models.py
inertia-backend/app/hooks/: pre-push
inertia-backend/app/routers/: audit.py  dashboard.py  puzzle.py  verify.py
inertia-backend/app/services/: __init__.py  lockout.py  puzzle_factory.py
inertia-backend/app/storage/: fallback_puzzles.json  store.py
inertia-cli/: inertia.py  pre-push  pre-push.py
inertia-frontend/: .env.example  README.md  index.html  package-lock.json  package.json
inertia-frontend/src/: App.tsx  index.css
inertia-frontend/src/api/: audit.ts  client.ts  dashboard.ts  puzzle.ts  verify.ts
inertia-frontend/src/components/common/: ErrorBanner.tsx  LoadingBlock.tsx
inertia-frontend/src/components/dashboard/: AttemptTimeline.tsx  LiveIndicator.tsx  LockoutBadge.tsx  StatCards.tsx  StudentDrawer.tsx  StudentTable.tsx
inertia-frontend/src/components/student/: AuditSummary.tsx  CountdownRing.tsx  DifficultyBadge.tsx  LockoutOverlay.tsx  PuzzleCard.tsx  VerifyResult.tsx
inertia-frontend/src/hooks/: useCountdown.ts  useSSE.ts
inertia-frontend/src/pages/Dashboard/: DashboardPage.tsx  ProjectDetailPage.tsx  (+2 more)
inertia-frontend/src/types/: index.ts
inertia-frontend/src/utils/: error.ts  format.ts
inertia_cli/: __init__.py  inertia.py
tests/cli/: test_smoke.py
tests/e2e/: test_student_flow.py
(+2 files in other folders)
