[project]
name = "inertia-edu"
version = "1.0.0"
description = "Proof-of-Thought git hook CLI for Inertia.edu"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
inertia = "inertia_cli.inertia:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inertia_cli"]

[tool.pytest.ini_options]
testpaths = ["tests", "inertia-backend/tests"]
pythonpath = ["inertia-backend", "."]
